K8s/my-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web
spec:
  replicas: 2
  selector:
    matchLabels:
      name: my-web-app
      app: my-web

  template:
    metadata:
      labels:
        name: my-web-app
        app: my-web
    spec:
      containers:
      - name: my-web
        image: my-web
        resources:
          requests:
            memory: "64Mi"
            cpu: "128m"
          limits:
            memory: "128Mi"
            cpu: "256m"
        ports:
        - containerPort: 80
