K8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: NodePort
  selector:
    name: my-web-app
    app: my-web
  ports:
  - port: 80
    targetPort: 80 
    nodePort: 30080
