K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-web-app
  labels:
    name: my-web
spec:
  ingressClassName: nginx-example
  rules:
    http:
      paths:
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: my-web
            port: 
              number: 80
